<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
    android:id="@+id/configCallLogs" 
    android:layout_width="match_parent" 
    android:layout_height="fill_parent" 
    android:orientation="vertical">   
    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
            android:background="@drawable/round" >
            
	        <TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginRight="4dp"
            	android:text="From" />
	                    
            <TextView
            	android:id="@+id/pastDateentry"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:hint="@string/past_date_hint" />
            
            <Button android:id="@+id/btnChangeDate"
	        	android:layout_width="25dp"
	        	android:layout_height="25dp"
	        	android:background="@drawable/google_calendar"
	        	android:layout_marginRight="4dp"
	        	android:layout_marginLeft="5dp"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textStyle="bold"
                android:layout_marginRight="4dp"
                android:text="To"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="2013-03-03"/>

        </LinearLayout>

	    <TextView
	        android:id="@+id/adv"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/adv_search" />
	
    <LinearLayout
      android:id="@+id/configCalloutgPref"
      android:orientation="vertical"
      android:layout_marginLeft="5dp"
      android:layout_marginTop="3dp"
      android:layout_marginRight="5dp"
      android:layout_width="fill_parent" 
      android:background="@drawable/round"
      android:layout_height="wrap_content" > 
         
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
            
	        <TextView 
	                android:id="@+id/lbloutgSelect" 
	                android:layout_width="wrap_content" 
	                android:layout_height="wrap_content"
	                android:textSize="13sp"   
	                android:text="@string/outgSelect_text" />
	        <TextView 
	                android:id="@+id/outgPrefDesc" 
	                android:layout_width="wrap_content" 
	                android:layout_height="wrap_content"
	                android:textSize="13sp"   
	                android:text="@string/outgSelect_text_Desc" />
	        
	        <Button
        	android:id="@+id/btnoutgSettings"
        	android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall" 
            android:textSize="13sp" 
        	android:text="@string/edit_settings"/>
         
	    </LinearLayout>
	

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblincgSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incgSelect_text"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/incgPrefDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incgSelect_text_Desc"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnincgSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_settings"
                style="?android:attr/buttonStyleSmall"
                android:textSize="13sp" />
        </LinearLayout>
        </LinearLayout>

	
    <RelativeLayout
      android:id="@+id/configCallSearch" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" > 
         
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal">
            
	       <Button 
            android:id="@+id/searchQuery" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/search_data"
            style="?android:attr/buttonStyleSmall" 
            android:textSize="13sp"  /> 
            
        	<Button
        	    android:id="@+id/btnClearRes"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/clear_results"
        	    style="?android:attr/buttonStyleSmall" 
                android:textSize="13sp"  />
        
	    </LinearLayout>
	</RelativeLayout>
	
    <RelativeLayout
      android:id="@+id/configCallSearch" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" > 
         
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:orientation="horizontal">
        	
	        
	        <CheckBox
        	android:id="@+id/selectall"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"        
        	android:focusable="false"
        	android:focusableInTouchMode="false"
        	android:text="@string/selectall" />
         
         
         <TextView 
            android:id="@+id/tv_image" 
            android:layout_width="50dp" 
            android:layout_height="wrap_content" 
            android:text="@string/image" />
         
 
        <TextView 
            android:id="@+id/tv_name" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dp"
            android:text="@string/name" />
        
       
  
        <TextView 
            android:id="@+id/tv_phone" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="45dp"
            android:text="@string/phone" 
            android:textColor="#000" />          
	       
        
	    </LinearLayout>
	</RelativeLayout>
	
    <ListView 
        android:id="@+id/lv_custom_list" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice"
        android:layout_marginTop="5dp"> 
    </ListView>
	
    
</LinearLayout>